Project

General

Profile

Actions

Bug #23610

closed

pg stuck in activating because of dropped pg-temp message

Added by Kefu Chai about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

http://pulpito.ceph.com/yuriw-2018-04-05_22:33:03-rados-wip-yuri3-testing-2018-04-05-1940-luminous-distro-basic-smithi/2358623

1. mon sent pg-create(1.0) to osd.1
2. osd.1 created 1.0 with acting set of [1,0]. pg 1.0 was active+clean by then.
3. osd.0 was down
4. osd.1 consumed the new osdmap, the up and acting set of pg 1.0 were [1,2], it started peering.
5. osd.1 notified osd.2 that it should create replica of pg 1.0
6. osd.2 withheld the creating of pg 1.0 because its "max-pg-per-osd" was 1
7. osd.2 removed all created pgs
8. osd.2 tried to a osd-pgtemp to mon. but the connection was reset.
9. osd.2 reconnected to mon, but the osd-pgtemp was not resent because the osd-mon connection is lossy.
10.osd.2 never resent the osd-pgtemp..


Related issues 2 (1 open1 closed)

Related to RADOS - Bug #23648: max-pg-per-osd.from-primary fails because of activating pgNewKefu Chai04/11/2018

Actions
Copied to RADOS - Backport #23630: luminous: pg stuck in activatingResolvedKefu ChaiActions
Actions #1

Updated by Kefu Chai about 6 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Nathan Cutler about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler about 6 years ago

Actions #4

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Fix Under Review
Actions #5

Updated by Kefu Chai about 6 years ago

  • Related to Bug #23648: max-pg-per-osd.from-primary fails because of activating pg added
Actions #6

Updated by Kefu Chai about 6 years ago

  • Subject changed from pg stuck in activating to pg stuck in activating because of dropped pg-temp message
Actions #7

Updated by Kefu Chai about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #8

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF